--- a/.github/workflows/my-workflow.yml
+++ b/.github/workflows/my-workflow.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   comment:
-    runs-on: ubuntu-latest 15.0.0
+    runs-on: ubuntu-20.04
     steps:
       - uses: actions/github-script@0.8.0
         with:
