--- a/.github/workflows/my-workflow.yml
+++ b/.github/workflows/my-workflow.yml
@@ -1,5 +1,4 @@
 name: Learning GitHub Script
-name: Learning GitHub Script
 
 on:
   issues:
@@ -7,8 +6,31 @@ on:
 
 jobs:
   comment:
-
     runs-on: ubuntu-latest
+    steps:
+    - name: Comment on new issue
+      uses: actions/github-script@0.8.0
+      with:
+        github-token: ${{secrets.GITHUB_TOKEN}}
+        script: |
+            github.issues.createComment({
+            issue_number: context.issue.number,
+            owner: context.repo.owner,
+            repo: context.repo.repo,
+            body: "🎉 You've created this issue comment using GitHub Script!!!"
+            })
+
+    - name: Add issue to project board
+      if: contains(github.event.issue.labels.*.name, 'bug')
+      uses: actions/github-script@0.8.0
+      with:
+        github-token: ${{secrets.GITHUB_TOKEN}}
+        script: |
+            github.projects.createCard({
+            column_id: 13329579,
+            content_id: context.payload.issue.id,
+            content_type: "Issue"
+            });
 
    
 
